# TaskTrecker2

./: .gitignore  README.md  requirements.txt  setup.cfg
instance/: flaskr.sqlite  tasktracker.sqlite
tasktrecker/: .coverage  __init__.py  auth.py  db.py  schema.sql  task.py
tasktrecker/htmlcov/: __init___py.html  auth_py.html  blog_py.html  d_a44f0ac069e85531___init___py.html  d_a44f0ac069e85531_conftest_py.html  d_a44f0ac069e85531_test_auth_py.html  d_a44f0ac069e85531_test_blog_py.html  d_a44f0ac069e85531_test_db_py.html  d_a44f0ac069e85531_test_factory_py.html  db_py.html  index.html  status.json
tasktrecker/templates/: base.html
tasktrecker/templates/auth/: login.html  register.html
tasktrecker/templates/task/: create.html  index.html  update.html
tasktrecker/tests/: conftest.py  test_auth.py  test_blog.py  test_db.py  test_factory.py
