[metadata]
name = tasktrecker
version = 2.0.0
url = localhost
license = BSD-3-Clause
maintainer = Askvart
maintainer_email = tur1amant@gmail.com
description = The tasktrecker in the Flask.
long_description = file: README.md
long_description_content_type = text

[options]
packages = find:
include_package_data = true
install_requires = Flask

[options.extras_require]
test = pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source = tasktrecker